# load_test_locust

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: fast_api_CI.yml
app/: database.py  main.py
app/api/endpoints/: predict.py
app/core/: config.py
app/models/: model_loader.py  prediction.py
app/schemas/: request.py  response.py
app/services/: inference_service.py
app/tests/: sanity_check.py  test_set.csv
artifacts/: _model.joblib
load_tests/: locustfile.py
postgresql/: docker-compose.yml
