[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.132.0",
    "joblib>=1.5.3",
    "locust>=2.43.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "scikit-learn==1.4.0",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
